force-app/main/default/objects/FieloPLT__Program__c/fields/ProductInjectQuery__c.field-meta.xml
<CustomField>
    <fullName>ProductInjectQuery__c</fullName>
    <label>Product Inject Query</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>