force-app/main/default/objects/FieloPLT__Program__c/fields/RequestInvoiceAuthorization__c.field-meta.xml
<CustomField>
    <fullName>RequestInvoiceAuthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When on, Invoices uploaded by Members will have to be approved before being processed for points rewarding.</description>
    <inlineHelpText>When on, Invoices uploaded by Members will have to be approved before being processed for points rewarding.</inlineHelpText>
    <label>Request Invoice Authorization</label>
    <type>Checkbox</type>
</CustomField>