force-app/main/default/objects/FieloPLT__Program__c/fields/RequestInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>RequestInvoiceDate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When on, Members will be asked to the date of the Invoices they upload.</description>
    <inlineHelpText>When on, Members will be asked to the date of the Invoices they upload.</inlineHelpText>
    <label>Request Invoice Date</label>
    <type>Checkbox</type>
</CustomField>