force-app/main/default/objects/FieloPLT__Program__c/fields/RequestInvoiceProducts__c.field-meta.xml
<CustomField>
    <fullName>RequestInvoiceProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When on, Members will be asked to itemize the products on the Invoices they upload.</description>
    <inlineHelpText>When on, Members will be asked to itemize the products on the Invoices they upload.</inlineHelpText>
    <label>Request Invoice Products</label>
    <type>Checkbox</type>
</CustomField>